# flecs-meta

./: README.md  flecs_meta.c  flecs_meta.h  meson.build  project.json
.github/workflows/: ci.yml
examples/c/01_struct/: project.json
examples/c/02_primitives/: project.json
examples/c/03_enum/: project.json
examples/c/04_bitmask/: project.json
examples/c/05_array/: project.json
examples/c/06_vector/: project.json
examples/c/07_map/: project.json
examples/c/08_serialize_entity/: project.json
examples/c/09_serialize_type/: project.json
examples/c/10_runtime_type/: project.json
examples/c/11_nested_struct/: project.json
examples/cpp/01_struct/: project.json
examples/cpp/02_primitives/: project.json
examples/cpp/03_enum/: project.json
examples/cpp/04_bitmask/: project.json
examples/cpp/05_array/: project.json
examples/cpp/06_vector/: project.json
examples/cpp/07_map/: project.json
examples/cpp/08_serialize_entity/: project.json
examples/cpp/09_serialize_type/: project.json
examples/cpp/10_runtime_type/: project.json
examples/cpp/11_nested_struct/: project.json
include/: api.h  bake_config.h  cache.h  flecs_components_meta.h  flecs_meta.h  meta.h
include/flecs-components-meta/: bake_config.h
include/flecs-meta/: bake_config.h
src/: api.c  cache.c  deserializer.c  main.c  parser.c  parser.h  pretty_print.c  serializer.c  serializer.h  string_ser.c  systems.h  type.c  type.h  util.c
test/deserailizer/: project.json
test/deserailizer/src/: Struct.c  main.c
test/deserializer/: project.json
test/serialize/: project.json
(+64 files in other folders)
